--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Bazelisk
         uses: bazelbuild/setup-bazelisk@v2
-      - name: Mount bazel cache  # Optional
+      - name: Mount bazel cache
         uses: actions/cache@v3
         with:
           path: "~/.cache/bazel"
