--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,30 +16,19 @@ jobs:
       - name: Build
         run: bazel build //:bazel-bep-protobuf
       - name: Extract version
+        id: extract_version
         run: |
-          #!/bin/bash
-
-          # Read the MODULE.bazel file line by line
-          while read -r line; do
-            # Check if the line contains "BAZEL_VERSION"
-            if [[ "$line" == *"BAZEL_VERSION"* ]]; then
-              # Extract the version using awk and write to version.txt
-              echo "$line" | awk -F'"' '{print $2}' > version.txt
-              break
-            fi
-          done < MODULE.bazel
-
-          # Check if version.txt is populated, otherwise print an error message
-          if [[ ! -s version.txt ]]; then
-            echo "Couldn't find BAZEL_VERSION in MODULE.bazel, you sure it's there?"
-          fi
+          VERSION=$(grep -oP 'BAZEL_VERSION=\K[^\s]+' MODULE.bazel)
+          echo "::set-output name=version::$VERSION"
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
           files: |
             bazel-bin/bazel-bep-protobuf.jar
-          tag_name: $(cat version.txt)
+          tag_name: ${{ steps.extract_version.outputs.version }}
           body: |
-            Bazel BEP Protobuf $(cat version.txt)
+            Bazel BEP Protobuf ${{ steps.extract_version.outputs.version }}
           draft: false
           prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
