--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,8 +1,15 @@
 load("@rules_java//java:java_single_jar.bzl", "java_single_jar")
 
+# copied from https://github.com/bazelbuild/bazel/tree/master/third_party/googleapis/google/devtools/build/v1
+
+
 java_single_jar(
     name = "bazel-bep-protobuf",
     deps = [
+        "@googleapis//:google_devtools_build_v1_build_events_java_proto",
+        "@googleapis//:google_devtools_build_v1_publish_build_event_java_grpc",
+        "@googleapis//:google_devtools_build_v1_publish_build_event_java_proto",
         "@io_bazel//src/main/java/com/google/devtools/build/lib/buildeventstream/proto:build_event_stream_java_proto",
+        "@io_bazel//third_party/grpc:grpc-jar_checked_in",
     ]
 )
