--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -9,6 +9,9 @@ java_single_jar(
         "@googleapis//:google_devtools_build_v1_build_events_java_proto",
         "@googleapis//:google_devtools_build_v1_publish_build_event_java_grpc",
         "@googleapis//:google_devtools_build_v1_publish_build_event_java_proto",
+        "@io_bazel//src/main/protobuf:deps_java_proto",
+        "@io_bazel//src/main/protobuf:failure_details_java_proto",
+        "@io_bazel//src/main/protobuf:invocation_policy_java_proto",
         "@io_bazel//src/main/java/com/google/devtools/build/lib/buildeventstream/proto:build_event_stream_java_proto",
         "@io_bazel//third_party/grpc:grpc-jar_checked_in",
     ]
