--- a/.bazelrc
+++ b/.bazelrc
@@ -1,1 +1,7 @@
 common --enable_bzlmod
+build --incompatible_strict_action_env
+build --nolegacy_external_runfiles
+startup --host_jvm_args=-DBAZEL_TRACK_SOURCE_DIRECTORIES=1
+build --noexperimental_check_output_files
+build --noexperimental_check_external_repository_files
+build --experimental_reuse_sandbox_directories
